namespace FinanceTracker.DataAccess
{
    public class UserManager
    {
    }
}
